// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandBar renders while status is <Completed> 1`] = `
<section
  aria-label="command bar"
  className="commandBar"
>
  <div
    className="items"
  >
    <CustomizedActionButton
      className="menuItemButton"
      data-automation-id="command-button-refresh"
      disabled={false}
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        }
      }
      onClick={[Function]}
      text="Start over"
    />
  </div>
  <div
    className="farItems"
  >
    <FlaggedComponent
      enableJSXElement={
        <CustomizedActionButton
          download="atestfile.html"
          href=" some url "
          iconProps={
            Object {
              "iconName": "Export",
            }
          }
        >
          Export result
        </CustomizedActionButton>
      }
      featureFlag="exportReport"
      featureFlagStoreData={
        Object {
          "somefeatureflag": true,
        }
      }
    />
    <CustomizedActionButton
      ariaLabel="settings"
      className="menuItemButton"
      data-automation-id="command-button-settings"
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Gear",
        }
      }
      onClick={[Function]}
    />
  </div>
</section>
`;

exports[`CommandBar renders while status is <Default> 1`] = `
<section
  aria-label="command bar"
  className="commandBar"
>
  <div
    className="items"
  >
    <CustomizedActionButton
      className="menuItemButton"
      data-automation-id="command-button-refresh"
      disabled={false}
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        }
      }
      onClick={[Function]}
      text="Start over"
    />
  </div>
  <div
    className="farItems"
  >
    <FlaggedComponent
      enableJSXElement={
        <CustomizedActionButton
          download="atestfile.html"
          href=" some url "
          iconProps={
            Object {
              "iconName": "Export",
            }
          }
        >
          Export result
        </CustomizedActionButton>
      }
      featureFlag="exportReport"
      featureFlagStoreData={
        Object {
          "somefeatureflag": true,
        }
      }
    />
    <CustomizedActionButton
      ariaLabel="settings"
      className="menuItemButton"
      data-automation-id="command-button-settings"
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Gear",
        }
      }
      onClick={[Function]}
    />
  </div>
</section>
`;

exports[`CommandBar renders while status is <Failed> 1`] = `
<section
  aria-label="command bar"
  className="commandBar"
>
  <div
    className="items"
  >
    <CustomizedActionButton
      className="menuItemButton"
      data-automation-id="command-button-refresh"
      disabled={false}
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        }
      }
      onClick={[Function]}
      text="Start over"
    />
  </div>
  <div
    className="farItems"
  >
    <FlaggedComponent
      enableJSXElement={
        <CustomizedActionButton
          download="atestfile.html"
          href=" some url "
          iconProps={
            Object {
              "iconName": "Export",
            }
          }
        >
          Export result
        </CustomizedActionButton>
      }
      featureFlag="exportReport"
      featureFlagStoreData={
        Object {
          "somefeatureflag": true,
        }
      }
    />
    <CustomizedActionButton
      ariaLabel="settings"
      className="menuItemButton"
      data-automation-id="command-button-settings"
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Gear",
        }
      }
      onClick={[Function]}
    />
  </div>
</section>
`;

exports[`CommandBar renders while status is <Scanning> 1`] = `
<section
  aria-label="command bar"
  className="commandBar"
>
  <div
    className="items"
  >
    <CustomizedActionButton
      className="menuItemButton"
      data-automation-id="command-button-refresh"
      disabled={true}
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        }
      }
      onClick={[Function]}
      text="Start over"
    />
  </div>
  <div
    className="farItems"
  >
    <FlaggedComponent
      enableJSXElement={
        <CustomizedActionButton
          download="atestfile.html"
          href=" some url "
          iconProps={
            Object {
              "iconName": "Export",
            }
          }
        >
          Export result
        </CustomizedActionButton>
      }
      featureFlag="exportReport"
      featureFlagStoreData={
        Object {
          "somefeatureflag": true,
        }
      }
    />
    <CustomizedActionButton
      ariaLabel="settings"
      className="menuItemButton"
      data-automation-id="command-button-settings"
      iconProps={
        Object {
          "className": "buttonIcon",
          "iconName": "Gear",
        }
      }
      onClick={[Function]}
    />
  </div>
</section>
`;
